k8s/templates/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: yc-frontend
  name: yc-frontend
spec:
  type: NodePort
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    nodePort: 80
  - name: "443"
    port: 443
    targetPort: 443
    nodePort: 443
  - name: "10873"
    port: 10873
    targetPort: 873
    nodePort: 10873
  selector:
    io.kompose.service: yc-frontend
